--- a/app.json
+++ b/app.json
@@ -1,93 +1,96 @@
 {
-  "pages": [
-    "pages/home/index",
-    "pages/shop/index",
-    "pages/mine/index",
-    "pages/login/index",
-    "pages/index/index"
-  ],
-  "tabBar": {
-    "color": "#999999",
-    "selectedColor": "#333333",
-    "backgroundColor": "#ffffff",
-    "list": [
-      {
-        "pagePath": "pages/home/index",
-        "iconPath": "/assets/image/tabbar/icon_tab1_24_nor@2x.png",
-        "selectedIconPath": "/assets/image/tabbar/icon_tab1_24_pre@2x.png",
-        "text": "首页"
-      },
-      {
-        "pagePath": "pages/shop/index",
-        "iconPath": "/assets/image/tabbar/icon_tab2_24_nor@2x.png",
-        "selectedIconPath": "/assets/image/tabbar/icon_tab2_24_pre@2x.png",
-        "text": "购物车"
-      },
-      {
-        "pagePath": "pages/mine/index",
-        "iconPath": "/assets/image/tabbar/icon_tab4_24_nor@2x.png",
-        "selectedIconPath": "/assets/image/tabbar/icon_tab4_24_pre@2x.png",
-        "text": "我的"
-      }
-    ]
-  },
-  "subpackages": [
-    {
-      "root": "subcontract",
-      "pages": [
-        "pages/webView/index"
-      ]
-    }
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle": "black"
-  },
-  "usingComponents": {
-    "van-cell": "@vant/weapp/cell/index",
-    "van-cell-group": "@vant/weapp/cell-group/index",
-    "van-switch": "@vant/weapp/switch/index",
-    "van-empty": "@vant/weapp/empty/index",
-    "van-row": "@vant/weapp/row/index",
-    "van-col": "@vant/weapp/col/index",
-    "van-search": "@vant/weapp/search/index",
-    "van-datetime-picker": "@vant/weapp/datetime-picker/index",
-    "van-swipe-cell": "@vant/weapp/swipe-cell/index",
-    "van-sidebar": "@vant/weapp/sidebar/index",
-    "van-sidebar-item": "@vant/weapp/sidebar-item/index",
-    "van-stepper": "@vant/weapp/stepper/index",
-    "van-dialog": "@vant/weapp/dialog/index",
-    "van-uploader": "@vant/weapp/uploader/index",
-    "van-tab": "@vant/weapp/tab/index",
-    "van-tabs": "@vant/weapp/tabs/index",
-    "van-checkbox": "@vant/weapp/checkbox/index",
-    "van-checkbox-group": "@vant/weapp/checkbox-group/index",
-    "van-tree-select": "@vant/weapp/tree-select/index",
-    "van-goods-action": "@vant/weapp/goods-action/index",
-    "van-goods-action-icon": "@vant/weapp/goods-action-icon/index",
-    "van-goods-action-button": "@vant/weapp/goods-action-button/index",
-    "van-notify": "@vant/weapp/notify/index",
-    "van-popup": "@vant/weapp/popup/index",
-    "van-area": "@vant/weapp/area/index",
-    "van-notice-bar": "@vant/weapp/notice-bar/index",
-    "van-tag": "@vant/weapp/tag/index",
-    "van-icon": "@vant/weapp/icon/index",
-    "van-button": "@vant/weapp/button/index",
-    "van-toast": "@vant/weapp/toast/index",
-    "van-image": "@vant/weapp/image/index",
-    "van-tabbar": "@vant/weapp/tabbar/index",
-    "van-tabbar-item": "@vant/weapp/tabbar-item/index"
-  },
-  "requiredBackgroundModes": [
-    "location"
-  ],
-  "permission": {
-    "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序位置接口的效果展示"
-    }
-  },
-  "style": "v2",
-  "sitemapLocation": "sitemap.json"
+	"pages": [
+		"pages/home/index",
+		"pages/shop/index",
+		"pages/mine/index",
+		"pages/login/index",
+		"pages/index/index",
+		"pages/images/index"
+	],
+	"tabBar": {
+		"color": "#999999",
+		"selectedColor": "#333333",
+		"backgroundColor": "#ffffff",
+		"list": [
+			{
+				"pagePath": "pages/home/index",
+				"iconPath": "/assets/image/tabbar/icon_tab1_24_nor@2x.png",
+				"selectedIconPath": "/assets/image/tabbar/icon_tab1_24_pre@2x.png",
+				"text": "首页"
+			},
+			{
+				"pagePath": "pages/shop/index",
+				"iconPath": "/assets/image/tabbar/icon_tab2_24_nor@2x.png",
+				"selectedIconPath": "/assets/image/tabbar/icon_tab2_24_pre@2x.png",
+				"text": "购物车"
+			},
+			{
+				"pagePath": "pages/mine/index",
+				"iconPath": "/assets/image/tabbar/icon_tab4_24_nor@2x.png",
+				"selectedIconPath": "/assets/image/tabbar/icon_tab4_24_pre@2x.png",
+				"text": "我的"
+			}
+		]
+	},
+	"subpackages": [
+		{
+			"root": "subcontract",
+			"pages": [
+				"pages/webView/index"
+			]
+		}
+	],
+	"window": {
+		"backgroundTextStyle": "light",
+		"navigationBarBackgroundColor": "#fff",
+		"navigationBarTitleText": "Weixin",
+		"navigationBarTextStyle": "black"
+	},
+	"usingComponents": {
+		"van-index-bar": "@vant/weapp/index-bar/index",
+		"van-index-anchor": "@vant/weapp/index-anchor/index",
+		"van-cell": "@vant/weapp/cell/index",
+		"van-cell-group": "@vant/weapp/cell-group/index",
+		"van-switch": "@vant/weapp/switch/index",
+		"van-empty": "@vant/weapp/empty/index",
+		"van-row": "@vant/weapp/row/index",
+		"van-col": "@vant/weapp/col/index",
+		"van-search": "@vant/weapp/search/index",
+		"van-datetime-picker": "@vant/weapp/datetime-picker/index",
+		"van-swipe-cell": "@vant/weapp/swipe-cell/index",
+		"van-sidebar": "@vant/weapp/sidebar/index",
+		"van-sidebar-item": "@vant/weapp/sidebar-item/index",
+		"van-stepper": "@vant/weapp/stepper/index",
+		"van-dialog": "@vant/weapp/dialog/index",
+		"van-uploader": "@vant/weapp/uploader/index",
+		"van-tab": "@vant/weapp/tab/index",
+		"van-tabs": "@vant/weapp/tabs/index",
+		"van-checkbox": "@vant/weapp/checkbox/index",
+		"van-checkbox-group": "@vant/weapp/checkbox-group/index",
+		"van-tree-select": "@vant/weapp/tree-select/index",
+		"van-goods-action": "@vant/weapp/goods-action/index",
+		"van-goods-action-icon": "@vant/weapp/goods-action-icon/index",
+		"van-goods-action-button": "@vant/weapp/goods-action-button/index",
+		"van-notify": "@vant/weapp/notify/index",
+		"van-popup": "@vant/weapp/popup/index",
+		"van-area": "@vant/weapp/area/index",
+		"van-notice-bar": "@vant/weapp/notice-bar/index",
+		"van-tag": "@vant/weapp/tag/index",
+		"van-icon": "@vant/weapp/icon/index",
+		"van-button": "@vant/weapp/button/index",
+		"van-toast": "@vant/weapp/toast/index",
+		"van-image": "@vant/weapp/image/index",
+		"van-tabbar": "@vant/weapp/tabbar/index",
+		"van-tabbar-item": "@vant/weapp/tabbar-item/index"
+	},
+	"requiredBackgroundModes": [
+		"location"
+	],
+	"permission": {
+		"scope.userLocation": {
+			"desc": "你的位置信息将用于小程序位置接口的效果展示"
+		}
+	},
+	"style": "v2",
+	"sitemapLocation": "sitemap.json"
 }
